# libcheckpoint

./: .gitignore  README.md
cfg/: README.md  example_checkpoint_content.h  exclude_checkpoint_bss.ld  exclude_checkpoint_data.ld  linkerscript.ld  startup.c
checkpoint/: CMakeLists.txt  checkpoint.c  checkpoint.h
checkpoint/arch/arm/: CMakeLists.txt  checkpoint_arch.h  checkpoint_setup.c  checkpoint_setup_restore.h
checkpoint/arch/arm/reg/: checkpoint_registers.c  checkpoint_registers.h
checkpoint/bss/: CMakeLists.txt  checkpoint_bss.c  checkpoint_bss.h  checkpoint_bss_cfg.h
checkpoint/code-id/: CMakeLists.txt  code_id.c
checkpoint/data/: CMakeLists.txt  checkpoint_data.c  checkpoint_data.h  checkpoint_data_cfg.h
checkpoint/stack/: CMakeLists.txt  checkpoint_stack.c  checkpoint_stack.h
